# AI-FZ

./: .env.example  .gitignore  PRODUCT.md  README.md  docker-compose.local.yml  docker-compose.yml
FZ-backend/: .env.bak.codex  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
FZ-backend/alembic/: env.py
FZ-backend/alembic/versions/: 202606120001_initial.py  202606120002_chat.py  202606120003_auth.py  202606120004_merchant_profile.py  202606120005_leads_notifications.py  202606120006_merchant_products.py  202606120007_product_images.py  202606120008_product_match_embeddings.py  202606120009_product_embedding_hnsw.py  202606120010_lead_product_id.py  202606120011_visitor_need_profiles.py  202606140001_vip_orders.py
FZ-backend/app/: main.py
FZ-backend/app/api/: router.py
FZ-backend/app/api/routes/: auth.py  chat.py  merchant.py  payments.py  products.py
FZ-backend/app/core/: config.py
FZ-backend/app/db/: session.py
FZ-backend/app/models/: __init__.py  auth.py  chat.py  lead.py  merchant.py  payment.py  product.py
FZ-backend/app/schemas/: auth.py  chat.py  merchant.py  public_product.py
FZ-backend/app/services/: alipay.py  embeddings.py  jade_agent.py  merchant_membership.py  product_image_recognition_agent.py  product_search.py  supabase_otp.py  vip_orders.py  visitor_product_matcher.py
FZ-backend/tests/: conftest.py  test_auth.py  test_chat.py  test_merchant_account.py  test_merchant_dashboard.py  test_merchant_leads.py  test_merchant_products.py  test_merchant_profile.py  test_product_image_recognition_agent_paths.py
(+47 files in other folders)
