[project]
name = "fz-backend"
version = "0.1.0"
description = "FastAPI backend for Gaocui H5"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.17.0",
  "asyncpg>=0.31.0",
  "fastapi[standard]>=0.124.0",
  "pgvector>=0.4.0",
  "psycopg2-binary>=2.9.11",
  "pydantic-settings>=2.12.0",
  "sqlalchemy[asyncio]>=2.0.45",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
